# outputdecorator

./: MANIFEST.in  README.md  setup.cfg  setup.py
output_decorator/: __init__.py  decorators.py
